--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,23 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/Inter_web/inter.css);
 @import url(../blocks/root/root.css);
-
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__description/profile__description.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__about/profile__about.css);
+@import url(../blocks/profile/__add-btn/profile__add-btn.css);
+@import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__pic/element__pic.css);
+@import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__btn/element__btn.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
