--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,3 +4,10 @@
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   gap: 17px;
 }
+
+@media screen and (max-width: 1023px)   {
+  .elements {
+    width: 100%;
+    margin: 36px 0 0 0;
+  }
+}
