--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,11 @@
   margin: 67px auto 0 auto;
   padding-bottom: 60px;
 }
+
+@media screen and (max-width: 1023px)   {
+  .footer {
+    width: 88%;
+    margin: 48px auto 0 auto;
+    padding-bottom: 36px;
+  }
+}
