--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,17 @@
 .header__logo {
-  max-width: 142px;
+  width: 142px;
+}
+
+@media screen and (max-width: 1023px)   {
+  .header__logo {
+    width: 130px;
+    margin-left: 25px;
+  }
+}
+
+@media screen and (max-width: 767px)   {
+  .header__logo {
+    width: 103px;
+    margin-left: 25px;
+  }
 }
