--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,12 @@
   padding-top: 45px;
   border-bottom: 1px solid #545454;
 }
+
+@media screen and (max-width: 1023px)   {
+  .header {
+    padding-top: 28px;
+    width: 100%;
+    height: 56px;
+  }
+}
+
