--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,5 +1,19 @@
 .profile__add-btn {
+  background-image: url(../../../images/Add_Button_L.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 150px;
+  height: 50px;
   position: absolute;
   top: 35px;
   right: 0;
+}
+
+@media screen and (max-width: 1023px)   {
+  .profile__add-btn {
+    background-image: url(../../../images/Add_Button_M.png);
+    position: static;
+    width: 282px;
+    margin: auto;
+  }
 }
