--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
   height: 120px;
   border-radius: 50%;
 }
+
+@media screen and (max-width: 1023px)   {
+  .profile__avatar {
+    margin: auto;
+  }
+}
