--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,3 +1,11 @@
 .profile__edit-btn {
   margin: 15px 0 0 18px;
 }
+
+@media screen and (max-width: 767px)   {
+  .profile__edit-btn {
+    width: 18px;
+    height: 18px;
+    margin: 8px 0 0 10px;
+  }
+}
