--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,5 +2,19 @@
   display: flex;
   margin: 22px 0 0 0;
   padding: 0;
-  width: 336px;
+  max-width: 336px;
+}
+
+@media screen and (max-width: 1023px)   {
+  .profile__info {
+    margin: 22px auto;
+    text-align: center;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px)   {
+  .profile__info {
+    justify-content: center;
+  }
 }
