--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,3 +3,10 @@
   display: flex;
   position: relative;
 }
+
+@media screen and (max-width: 1023px)   {
+  .profile {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
