--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -9,6 +9,11 @@
   right: 0;
 }
 
+.profile__add-btn:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 1023px)   {
   .profile__add-btn {
     background-image: url(../../../images/Add_Button_M.png);
