--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -2,6 +2,11 @@
   margin: 15px 0 0 18px;
 }
 
+.profile__edit-btn:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 767px)   {
   .profile__edit-btn {
     width: 18px;
