--- a/pages/index.css
+++ b/pages/index.css
@@ -20,4 +20,26 @@
 @import url(../blocks/element/__btn/element__btn.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/input/input.css);
+@import url(../blocks/input/__text/input__text.css);
+@import url(../blocks/input/__text/_type/input__text_type_name.css);
+@import url(../blocks/input/__text/_type/input__text_type_about.css);
+@import url(../blocks/popup/__save-btn/popup__save-btn.css);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
