final html,css,js,readme

--- a/blocks/input/__text/input__text.css
+++ b/blocks/input/__text/input__text.css
@@ -1,7 +1,7 @@
 .input__text {
   margin: 0;
   padding: 0;
-  width: 358px;
+  width: 100%;
   box-sizing: border-box;
   padding: 13px;
   border: 0;
