--- a/blocks/input/input.css
+++ b/blocks/input/input.css
@@ -1,6 +1,6 @@
 .input {
   margin: 54px auto 0 auto;
-  width: 358px;
+  width: 84%;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
