--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,4 +6,11 @@
   color: #000000;
   margin: auto;
   border-radius: 10px;
+  position: relative;
+}
+
+@media screen and (max-width: 767px)   {
+  .popup__container {
+    width: 90%;
+  }
 }
