--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -18,3 +18,12 @@
   opacity: 0.8;
   transition: 0.3s;
 }
+
+@media screen and (max-width: 767px) {
+  .popup__save-btn {
+    width: 100%;
+    margin: 45px auto 25px auto;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
