--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_active/popup_active.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/input/input.css);
@@ -28,17 +29,9 @@
 @import url(../blocks/input/__text/_type/input__text_type_name.css);
 @import url(../blocks/input/__text/_type/input__text_type_about.css);
 @import url(../blocks/popup/__save-btn/popup__save-btn.css);
+@import url(../blocks/popup/__close/popup__close.css);
 
 
-.popup__close {
-  align-self: flex-end;
-  margin: -40px -40px 0 0;
-}
-
-.popup__close:hover {
-  cursor: pointer;
-  opacity: 0.6;
-}
 
 
 
