--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,4 +1,6 @@
 .profile__edit-btn {
+  width: 24px;
+  height: 24px;
   margin: 15px 0 0 18px;
 }
 
@@ -7,7 +9,7 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 767px)   {
+@media screen and (max-width: 767px) {
   .profile__edit-btn {
     width: 18px;
     height: 18px;
