--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,6 +4,7 @@
   background-color: #ffffff;
   width: 430px;
   color: #000000;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   margin: auto;
   border-radius: 10px;
   position: relative;
