--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,15 +1,15 @@
 .elements {
   width: 100%;
-  margin: 50px 0 0 0;
+  margin: 40px 0 0 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  gap: 17px;
+  column-gap: 17px;
+  row-gap: 20px;
 }
 
 @media screen and (max-width: 1023px)   {
   .elements {
     max-width: 584px;
-    margin: 36px auto 0 auto;
-    gap: 20px;
+    margin: 33px auto 0 auto;
   }
 }
