--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,16 @@
 .header {
   max-width: 880px;
-  height: 74px;
   margin: auto;
   padding-top: 45px;
+  padding-bottom: 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.8);
 }
 
 @media screen and (max-width: 1023px)   {
   .header {
     padding-top: 28px;
+    padding-bottom: 31px;
     width: 100%;
-    height: 56px;
   }
 }
 
