--- a/blocks/input/input.css
+++ b/blocks/input/input.css
@@ -1,7 +1,13 @@
 .input {
-  margin: 54px auto 0 auto;
+  margin: 30px auto 0 auto;
   width: 84%;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+}
+
+@media screen and (max-width: 1023px)   {
+  .input {
+    margin: 50px auto 0 auto;
+  }
 }
