--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -1,7 +1,7 @@
 .popup__save-btn {
   margin: 48px auto 37px auto;
+  padding: 16px 0;
   width: 358px;
-  height: 50px;
   background-color: #000000;
   color: #ffffff;
   border: 0;
