--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,24 +1,26 @@
 .profile__add-btn {
-  background-image: url(../../../images/Add_Button_L.png);
+  background-image: url(../../../images/Add_Button.svg);
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
   width: 150px;
   height: 50px;
   position: absolute;
   top: 35px;
   right: 0;
+  border: 2px solid #FFFFFF;
+  transition: 0.5s;
 }
 
 .profile__add-btn:hover {
   cursor: pointer;
   opacity: 0.6;
+  transition: 0.5s;
 }
 
 @media screen and (max-width: 1023px)   {
   .profile__add-btn {
-    background-image: url(../../../images/Add_Button_M.png);
     position: static;
     width: 282px;
-    margin: auto;
+    margin: 8px auto 0 auto;
   }
 }
