--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,5 +1,14 @@
 .profile__description {
   margin: 0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .profile__description {
+    margin-top: 7px;
+    margin-left: 30px;
+  }
+}
