--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,7 @@
 .root {
   background-color: #000000;
   min-width: 320px;
+  max-width: 1660px;
   margin: 0 auto;
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   color: #ffffff;
