--- a/blocks/element/__btn/element__btn.css
+++ b/blocks/element/__btn/element__btn.css
@@ -1,4 +1,12 @@
 .element__btn {
+  background-image: url(../../../images/Group.svg);
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  width: 22px;
+  height: 19px;
   margin: auto 5px auto 0;
   transition: 0.5s;
 }
