--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,12 @@
 .popup__close {
+  background-image: url(../../../images/Close_Icon.svg);
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
   position: absolute;
   align-self: flex-end;
   top: -40px;
@@ -16,6 +24,7 @@
   .popup__close {
     width: 20px;
     height: 20px;
+    background-size: contain;
     top: -30px;
     right: 0;
   }
