--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,5 +1,10 @@
 .profile__add-btn {
   background-image: url(../../../images/Add_Button.svg);
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   width: 150px;
