--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,4 +1,5 @@
 .profile__description {
+  max-width: 294px;
   margin: 0;
   padding: 0;
   text-overflow: ellipsis;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width: 767px) {
   .profile__description {
+    max-width: 189px;
     margin-top: 7px;
     margin-left: 30px;
   }
