--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,4 +1,11 @@
 .profile__edit-btn {
+  background-image: url(../../../images/Edit_Button.svg);
+  background-size: contain;
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
   width: 24px;
   height: 24px;
   margin: 15px 0 0 18px;
@@ -15,6 +22,6 @@
   .profile__edit-btn {
     width: 18px;
     height: 18px;
-    margin: 14px 0 0 10px;
+    margin: 15px 0 0 10px;
   }
 }
