--- a/blocks/popup/_active/popup_active.css
+++ b/blocks/popup/_active/popup_active.css
@@ -1,10 +1,4 @@
 .popup_active {
-  display: flex;
-  position: fixed;
-  align-items: center;
-  justify-content: center;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
+  visibility: visible;
+  opacity: 1;
 }
