--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,15 @@
 .popup {
-  display: none;
-  margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  padding-top: 195px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 10;
+	transition: all 0.5s ease;
+	opacity: 0;
+	visibility: hidden;
 }
 
 
