--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__btn/_active/element__btn_active.css);
 @import url(../blocks/element/__delete-btn/element__delete-btn.css);
 @import url(../blocks/element/__pic/element__pic.css);
 @import url(../blocks/element/__group/element__group.css);
@@ -34,11 +35,40 @@
 
 
 
+.popup-pic {
+  position: fixed;
+  padding: 90px 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  transition: all 0.5s ease;
+	opacity: 0;
+	visibility: hidden;
+}
 
+.popup-pic_active {
+  visibility: visible;
+  opacity: 1;
+}
 
+.popup-pic__container {
+  width: max-content;
+  margin: 0 auto;
+  position: relative;
+}
 
+.popup-pic__foto {
+  max-width: 816px;
+  height: 540px;
+  object-fit: contain;
+}
 
-
-
-
-
+.popup-pic__description {
+  margin: 10px 0 0 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
