--- a/pages/index.css
+++ b/pages/index.css
@@ -59,7 +59,7 @@
   position: relative;
 }
 
-.popup-pic__foto {
+.popup-pic__photo {
   max-width: 816px;
   height: 540px;
   object-fit: contain;
@@ -71,4 +71,36 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
+}
+
+.popup-pic__close {
+  background-image: url(../images/Close_Icon.svg);
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  position: absolute;
+  align-self: flex-end;
+  top: -40px;
+  right: -40px;
+  transition: 0.5s;
+}
+
+.popup-pic__close:hover {
+  cursor: pointer;
+  opacity: 0.6;
+  transition: 0.5s;
+}
+
+@media screen and (max-width: 767px)   {
+  .popup-pic__close {
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    top: -30px;
+    right: 0;
+  }
 }
