--- a/blocks/element/__like-btn/_active/element__like-btn_active.css
+++ b/blocks/element/__like-btn/_active/element__like-btn_active.css
@@ -1,4 +1,4 @@
-.element__btn_active {
+.element__like-btn_active {
   background-image: url(../../../../images/like_active.svg);
   padding: 0;
   border: none;
@@ -10,7 +10,7 @@
   margin: auto 5px auto 0;
 }
 
-.element__btn_active:hover {
+.element__like-btn_active:hover {
   cursor: pointer;
   transition: 0.5s;
 }
