--- a/blocks/element/__like-btn/element__like-btn.css
+++ b/blocks/element/__like-btn/element__like-btn.css
@@ -1,4 +1,4 @@
-.element__btn {
+.element__like-btn {
   background-image: url(../../../images/Group.svg);
   padding: 0;
   border: none;
@@ -11,7 +11,7 @@
   transition: 0.5s;
 }
 
-.element__btn:hover {
+.element__like-btn:hover {
   cursor: pointer;
   opacity: 0.5;
   transition: 0.5s;
