--- a/blocks/popup/__photo/popup__photo.css
+++ b/blocks/popup/__photo/popup__photo.css
@@ -1,18 +1,18 @@
-.popup-pic__photo {
+.popup__photo {
   max-width: 816px;
   height: 540px;
   object-fit: contain;
 }
 
 @media screen and (max-width: 1024px) {
-  .popup-pic__photo {
+  .popup__photo {
     max-width: 740px;
     height: 400px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .popup-pic__photo {
+  .popup__photo {
     max-width: 240px;
     height: 299px;
     object-fit: cover;
