--- a/blocks/popup/_open-card/popup_open-card.css
+++ b/blocks/popup/_open-card/popup_open-card.css
@@ -1,24 +1,16 @@
-.popup-pic {
-  position: fixed;
+.popup_open-card {
   padding: 90px 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
-  transition: all 0.5s ease;
-	opacity: 0;
-	visibility: hidden;
 }
 
 @media screen and (max-width: 1024px)   {
-  .popup-pic {
+  .popup_open-card {
     padding: 85px 0;
   }
 }
 
 @media screen and (max-width: 767px)   {
-  .popup-pic {
+  .popup_open-card {
     padding: 136px 0;
   }
 }
