--- a/pages/index.css
+++ b/pages/index.css
@@ -27,10 +27,14 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/input-text/input-text.css);
+@import url(../blocks/input-text/_invalid/input-text_invalid.css);
+@import url(../blocks/input-text/_error/input-text__error.css);
+@import url(../blocks/input-text/_error/_active/input-text__error_active.css);
 @import url(../blocks/input-text/_type/input-text_type_about.css);
 @import url(../blocks/input-text/_type/input-text_type_name.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__save-btn/popup__save-btn.css);
+@import url(../blocks/popup/__save-btn/_inactive/popup__save-btn_inactive.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
 @import url(../blocks/popup/__description/popup__description.css);
 @import url(../blocks/popup/_active/popup_active.css);
