--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/input-text/input-text.css);
+@import url(../blocks/input/_place-error/input.css);
 @import url(../blocks/input-text/_invalid/input-text_invalid.css);
 @import url(../blocks/input-text/_error/input-text__error.css);
 @import url(../blocks/input-text/_error/_active/input-text__error_active.css);
